--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
-    "@supabase/supabase-js": "^2.89.0",
+    "@aws-sdk/client-s3": "^3.699.0",
     "@tiptap/extension-text-align": "^3.10.1",
     "@tiptap/extension-underline": "^3.10.1",
     "@tiptap/react": "^3.10.1",
@@ -34,8 +34,8 @@
     "clsx": "^2.1.1",
     "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
-    "isomorphic-dompurify": "^2.30.1",
     "jose": "^6.1.0",
+    "sanitize-html": "^2.13.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.546.0",
     "next": "^16.1.0",
@@ -56,6 +56,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/dompurify": "^3.0.5",
     "@types/node": "20.19.23",
+    "@types/sanitize-html": "^2.13.0",
     "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
