--- a/env.example
+++ b/env.example
@@ -1,6 +1,9 @@
 # Cloudflare D1 Database
 DATABASE_URL="file:./dev.db"
 
+# Supabase PostgreSQL (only needed for migration)
+# SUPABASE_DATABASE_URL="postgresql://postgres.[PROJECT-REF]:[YOUR-PASSWORD]@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
+
 # Cloudflare R2 Storage
 R2_ENDPOINT="https://<account-id>.r2.cloudflarestorage.com"
 R2_ACCESS_KEY_ID="your-r2-access-key-id"
