--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "prisma:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
-    "seo:index": "node scripts/auto-index.js"
+    "seo:index": "node scripts/auto-index.js",
+    "pages:dev": "wrangler pages dev .next --d1=DB:khyber-shawls-db --port=3000",
+    "pages:deploy": "npm run build && wrangler pages deploy .next --project-name=khyber-shawls"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.699.0",
     "@elasticemail/elasticemail-client": "^4.0.23",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/internals": "^6.18.0",
@@ -22,7 +25,6 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
-    "@aws-sdk/client-s3": "^3.699.0",
     "@tiptap/extension-text-align": "^3.10.1",
     "@tiptap/extension-underline": "^3.10.1",
     "@tiptap/react": "^3.10.1",
@@ -35,16 +37,17 @@
     "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "jose": "^6.1.0",
-    "sanitize-html": "^2.13.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.546.0",
     "next": "^16.1.0",
     "nextjs-toploader": "^3.9.17",
     "nodemailer": "^6.9.8",
+    "pg": "^8.18.0",
     "postgres": "^3.4.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
+    "sanitize-html": "^2.13.1",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
@@ -56,10 +59,10 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/dompurify": "^3.0.5",
     "@types/node": "20.19.23",
-    "@types/sanitize-html": "^2.13.0",
     "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sanitize-html": "^2.13.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "next-sitemap": "^4.2.3",
