--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,22 +1,18 @@
 name = "khyber-shawls"
 compatibility_date = "2024-01-01"
+pages_build_output_dir = ".next"
 
 # Cloudflare D1 Database
 [[d1_databases]]
 binding = "DB"
 database_name = "khyber-shawls-db"
-database_id = "your-database-id"
+database_id = "your-database-id-here"  # Get this after creating D1 database
 
 # R2 Storage Bucket
 [[r2_buckets]]
 binding = "UPLOADS"
-bucket_name = "your-bucket-name"
+bucket_name = "khyber-shawls-uploads"
 
-# Environment variables
+# Environment variables for local development
 [vars]
 NODE_ENV = "production"
-
-# Routes for custom domain (optional)
-# routes = [
-#   { pattern = "khybershawls.store", zone_name = "khybershawls.store" }
-# ]
