--- a/package.json
+++ b/package.json
@@ -58,11 +58,14 @@
     "@tailwindcss/postcss": "^4.1.16",
     "@types/bcryptjs": "^2.4.6",
     "@types/dompurify": "^3.0.5",
+    "@types/linkify-it": "^5.0.0",
+    "@types/mdurl": "^2.0.0",
     "@types/node": "20.19.23",
     "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.13.0",
+    "@types/trusted-types": "^2.0.7",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "next-sitemap": "^4.2.3",
