--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.985.0",
     "@elasticemail/elasticemail-client": "^4.0.23",
+    "@floating-ui/dom": "^1.7.5",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/internals": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.12",
