--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
     "sanitize-html": "^2.13.1",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@prisma/client": "^6.18.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.8.0",
-    "@prisma/client": "^6.18.0",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/bcryptjs": "^2.4.6",
     "@types/dompurify": "^3.0.5",
