--- a/package.json
+++ b/package.json
@@ -52,11 +52,12 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12",
-    "@prisma/client": "^6.18.0"
+    "@prisma/client": "^6.18.0",
+    "@tailwindcss/postcss": "^4.1.16",
+    "tailwindcss": "^4"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.8.0",
-    "@tailwindcss/postcss": "^4.1.16",
     "@types/bcryptjs": "^2.4.6",
     "@types/dompurify": "^3.0.5",
     "@types/linkify-it": "^5.0.0",
@@ -71,7 +72,6 @@
     "eslint-config-next": "16.0.0",
     "next-sitemap": "^4.2.3",
     "prisma": "^6.18.0",
-    "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
