--- a/package.json
+++ b/package.json
@@ -65,13 +65,13 @@
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.13.0",
     "@types/trusted-types": "^2.0.7",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "next-sitemap": "^4.2.3",
+    "prisma": "^6.18.0"
   },
   "devDependencies": {
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
-    "next-sitemap": "^4.2.3",
-    "prisma": "^6.18.0",
     "ts-node": "^10.9.2"
   },
   "prisma": {
