--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && next build && npx @cloudflare/next-on-pages",
     "postbuild": "next-sitemap && node scripts/auto-index.js",
     "start": "next start -p ${PORT:-3000}",
     "lint": "eslint",
