--- a/package.json
+++ b/package.json
@@ -14,22 +14,35 @@
     "db:push": "prisma db push",
     "seo:index": "node scripts/auto-index.js",
     "pages:dev": "wrangler pages dev .next --d1=DB:khyber-shawls-db --port=3000",
-    "pages:deploy": "npm run build && wrangler pages deploy .next --project-name=khyber-shawls"
+    "pages:deploy": "npm run build && wrangler pages deploy .vercel/output/static --project-name=khyber-shawls"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.985.0",
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@elasticemail/elasticemail-client": "^4.0.23",
     "@floating-ui/dom": "^1.7.5",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^6.18.0",
     "@prisma/internals": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.16",
     "@tiptap/extension-text-align": "^3.10.1",
     "@tiptap/extension-underline": "^3.10.1",
     "@tiptap/react": "^3.10.1",
     "@tiptap/starter-kit": "^3.10.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/dompurify": "^3.0.5",
+    "@types/linkify-it": "^5.0.0",
+    "@types/mdurl": "^2.0.0",
+    "@types/node": "20.19.23",
+    "@types/nodemailer": "^7.0.3",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/sanitize-html": "^2.13.0",
+    "@types/trusted-types": "^2.0.7",
     "@vercel/speed-insights": "^1.2.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -41,33 +54,22 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.546.0",
     "next": "^16.1.0",
+    "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^3.9.17",
     "nodemailer": "^6.9.8",
     "pg": "^8.18.0",
     "postgres": "^3.4.7",
+    "prisma": "^6.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "sanitize-html": "^2.13.1",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.12",
-    "@prisma/client": "^6.18.0",
-    "@tailwindcss/postcss": "^4.1.16",
     "tailwindcss": "^4",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/dompurify": "^3.0.5",
-    "@types/linkify-it": "^5.0.0",
-    "@types/mdurl": "^2.0.0",
-    "@types/node": "20.19.23",
-    "@types/nodemailer": "^7.0.3",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/sanitize-html": "^2.13.0",
-    "@types/trusted-types": "^2.0.7",
     "typescript": "^5.9.3",
-    "next-sitemap": "^4.2.3",
-    "prisma": "^6.18.0"
+    "wrangler": "^4.63.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "eslint": "^9",
