--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@elasticemail/elasticemail-client": "^4.0.23",
     "@floating-ui/dom": "^1.7.5",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/adapter-d1": "^7.3.0",
     "@prisma/client": "^6.18.0",
     "@prisma/internals": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.12",
