Fix: correct Cloudflare output directory and build command logic

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "khyber-shawls"
 compatibility_date = "2024-01-01"
-pages_build_output_dir = ".vercel/output/static"
+pages_build_output_dir = ".vercel/output"
 
 # Cloudflare D1 Database
 [[d1_databases]]
