--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "khyber-shawls"
-compatibility_date = "2024-01-01"
+compatibility_date = "2024-11-18"
+compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output"
 
 # Cloudflare D1 Database
