fix: Cloudflare Pages compatibility audit - fix all incompatibilities
CRITICAL FIXES:
- Replace nodemailer (TCP sockets) with Elastic Email HTTP REST API
- Remove dotenv/config import (uses fs.readFileSync)
- Fix R2 upload: use R2 binding directly on CF, lazy-init S3 client, replace Buffer.from with Uint8Array
- Remove incompatible Node.js packages: bcrypt, jsonwebtoken, nodemailer, pg, postgres, dotenv
- Remove @vercel/speed-insights (Vercel-only)
- Remove @elasticemail/elasticemail-client (replaced with REST API)
- Remove @types/nodemailer

RUNTIME FIXES:
- Add export const runtime = 'edge' to root layout, admin layout, not-found page
- Fix client components (cart, checkout, track-order): remove invalid runtime export from 'use client' files
- Fix 'use client'export const runtime = 'edge' syntax errors (missing separator)

CACHE FIXES:
- Replace all unstable_cache usages (not supported on CF Pages) with direct async functions
  in: products.ts, settings.ts, hero.ts, journal.ts

API FIXES:
- Fix revalidateTag() calls: remove invalid 2nd argument (6 instances in admin/actions.ts)
- Remove DATABASE_URL guard in journal.ts (D1 doesn't use DATABASE_URL)
- Remove in-memory Map rate limiting in middleware.ts and auth actions (stateless on CF Workers)
- Remove outputFileTracingIncludes from next.config.ts (standalone mode only)
- Update env.example with ELASTIC_EMAIL_API_KEY variable

--- a/env.example
+++ b/env.example
@@ -16,7 +16,9 @@ ADMIN_EMAILS="atifjan2019@gmail.com"
 NEXT_PUBLIC_BASE_URL="https://khybershawls.store"
 INDEXNOW_KEY="f62ac64736457788c87fd04cf940e4cd"
 
+# Email Configuration (HTTP-based API for Cloudflare Workers compatibility)
+# Uses Elastic Email REST API instead of SMTP (nodemailer is not compatible with CF Workers)
+ELASTIC_EMAIL_API_KEY="your-elastic-email-api-key"
 ELASTIC_EMAIL_USER="e6xd41718014549@managedcloudhostingemail.com"
 ELASTIC_EMAIL_PASSWORD="your-elastic-email-password"
-SMTP_PORT=2525
 MAIL_FROM="mail@webspires.co.uk"
