feat: Integrate Cloudflare Next.js adapter and Wrangler CLI, and update deployment script for Vercel output.

--- a/env.example
+++ b/env.example
@@ -1,13 +1,10 @@
-# Cloudflare D1 Database
-DATABASE_URL="file:./dev.db"
+# Database
+DATABASE_URL="file:./prisma/dev.db"
 
-# Supabase PostgreSQL (only needed for migration)
-# SUPABASE_DATABASE_URL="postgresql://postgres.[PROJECT-REF]:[YOUR-PASSWORD]@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
-
-# Cloudflare R2 Storage
+# Storage (S3-compatible, e.g. AWS S3 or Cloudflare R2)
 R2_ENDPOINT="https://<account-id>.r2.cloudflarestorage.com"
-R2_ACCESS_KEY_ID="your-r2-access-key-id"
-R2_SECRET_ACCESS_KEY="your-r2-secret-access-key"
+R2_ACCESS_KEY_ID="your-access-key-id"
+R2_SECRET_ACCESS_KEY="your-secret-access-key"
 R2_BUCKET_NAME="your-bucket-name"
 R2_PUBLIC_URL="https://your-bucket.your-domain.com"
 
@@ -16,9 +13,8 @@ ADMIN_EMAILS="atifjan2019@gmail.com"
 NEXT_PUBLIC_BASE_URL="https://khybershawls.store"
 INDEXNOW_KEY="f62ac64736457788c87fd04cf940e4cd"
 
-# Email Configuration (HTTP-based API for Cloudflare Workers compatibility)
-# Uses Elastic Email REST API instead of SMTP (nodemailer is not compatible with CF Workers)
+# Email Configuration
 ELASTIC_EMAIL_API_KEY="your-elastic-email-api-key"
-ELASTIC_EMAIL_USER="e6xd41718014549@managedcloudhostingemail.com"
-ELASTIC_EMAIL_PASSWORD="your-elastic-email-password"
-MAIL_FROM="mail@webspires.co.uk"
+ELASTIC_EMAIL_USER="mail@example.com"
+ELASTIC_EMAIL_PASSWORD="your-password"
+MAIL_FROM="mail@example.com"
