--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "pages:build": "prisma generate && DATABASE_URL='file:./dev.db' npx @cloudflare/next-on-pages",
     "postbuild": "next-sitemap && node scripts/auto-index.js",
     "start": "next start -p ${PORT:-3000}",
     "lint": "eslint",
@@ -13,16 +12,12 @@
     "prisma:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
-    "seo:index": "node scripts/auto-index.js",
-    "pages:dev": "wrangler pages dev .next --d1=DB:khyber-shawls-db --port=3000",
-    "pages:deploy": "npm run pages:build && wrangler pages deploy .vercel/output/static --project-name=khyber-shawls"
+    "seo:index": "node scripts/auto-index.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.985.0",
-    "@cloudflare/next-on-pages": "^1.13.16",
     "@floating-ui/dom": "^1.7.5",
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/adapter-d1": "^7.3.0",
     "@prisma/client": "^6.18.0",
     "@prisma/internals": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -47,6 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.3.0",
+    "dotenv": "^16.4.7",
     "jose": "^6.1.0",
     "lucide-react": "^0.546.0",
     "next": "^16.1.0",
@@ -61,7 +57,6 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4",
     "typescript": "^5.9.3",
-    "wrangler": "^4.63.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
