--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.13.0",
     "@types/trusted-types": "^2.0.7",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
