chore: remove wrangler.toml configuration file

--- a/env.example
+++ b/env.example
@@ -14,7 +14,9 @@ NEXT_PUBLIC_BASE_URL="https://khybershawls.store"
 INDEXNOW_KEY="f62ac64736457788c87fd04cf940e4cd"
 
 # Email Configuration
+ELASTIC_EMAIL_USER="your-email@managedcloudhostingemail.com"
+ELASTIC_EMAIL_PASSWORD="your-elastic-email-password"
 ELASTIC_EMAIL_API_KEY="your-elastic-email-api-key"
-ELASTIC_EMAIL_USER="mail@example.com"
-ELASTIC_EMAIL_PASSWORD="your-password"
-MAIL_FROM="mail@example.com"
+SMTP_PORT=2525
+MAIL_FROM="mail@your-domain.com"
+
