--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-s3": "^3.985.0",
     "@floating-ui/dom": "^1.7.5",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/adapter-d1": "^7.3.0",
     "@prisma/client": "^6.18.0",
     "@prisma/internals": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -62,9 +63,11 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20260207.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "wrangler": "^4.63.0"
   },
   "prisma": {
     "schema": "prisma/schema.prisma",
