--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": [
+      "@cloudflare/workers-types/2023-07-01"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -35,9 +38,7 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts",
-    "prisma/seed.js",
-    ".next\\dev/types/**/*.ts",
-    ".next\\dev/types/**/*.ts"
+    "prisma/seed.js"
   ],
   "exclude": [
     "node_modules"
