--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.985.0",
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@floating-ui/dom": "^1.7.5",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-d1": "^7.3.0",
