--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap && node scripts/auto-index.js",
+    "postbuild": "next-sitemap",
     "start": "next start -p ${PORT:-3000}",
     "lint": "eslint",
     "postinstall": "npx prisma generate",
